--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vechain/connex": "^2.0.14",
     "antd": "^5.2.2",
+    "ethers": "^6.0.8",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
