--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^6.0.8",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
